@@ -15,17 +15,18 @@ module RailsWizard
     @@recipes << %w(gems git setup)
     @@recipes << %w(gems git readme setup)
     @@recipes << %w(extras gems git readme setup)
-    @@recipes << %w(controllers email extras frontend gems git init models railsapps readme routes setup testing views)
-    @@recipes << %w(controllers core email extras frontend gems git init models railsapps readme routes setup testing views)
-    @@recipes << %w(controllers core email extras frontend gems git init models prelaunch railsapps readme routes setup testing views)
-    @@recipes << %w(controllers core email extras frontend gems git init models prelaunch railsapps readme routes saas setup testing views)
-    @@recipes << %w(controllers email example extras frontend gems git init models railsapps readme routes setup testing views)
-    @@recipes << %w(controllers email example extras frontend gems git init models prelaunch railsapps readme routes setup testing views)
-    @@recipes << %w(controllers email example extras frontend gems git init models prelaunch railsapps readme routes saas setup testing views)
-    @@recipes << %w(apps4 controllers core email extras frontend gems git init models prelaunch railsapps readme routes saas setup testing views)
-    @@recipes << %w(apps4 controllers core email extras frontend gems git init models prelaunch railsapps readme routes saas setup testing tests4 views)
-    @@recipes << %w(apps4 controllers core deployment email extras frontend gems git init models prelaunch railsapps readme routes saas setup testing views)
-    @@recipes << %w(apps4 controllers core deployment email extras frontend gems git init models prelaunch railsapps readme routes saas setup testing tests4 views)
+    @@recipes << %w(email extras frontend gems git init railsapps readme setup testing)
+    @@recipes << %w(core email extras frontend gems git init railsapps readme setup testing)
+    @@recipes << %w(core email extras frontend gems git init railsapps readme setup testing)
+    @@recipes << %w(core email extras frontend gems git init railsapps readme setup testing)
+    @@recipes << %w(email example extras frontend gems git init railsapps readme setup testing)
+    @@recipes << %w(email example extras frontend gems git init railsapps readme setup testing)
+    @@recipes << %w(email example extras frontend gems git init railsapps readme setup testing)
+    @@recipes << %w(apps4 core email extras frontend gems git init railsapps readme setup testing)
+    @@recipes << %w(apps4 core email extras frontend gems git init railsapps readme setup tests4)
+    @@recipes << %w(apps4 core deployment email extras frontend gems git init railsapps readme setup testing)
+    @@recipes << %w(apps4 core deployment email extras frontend gems git init railsapps readme setup tests4)
+    @@recipes << %w(apps4 core deployment devise email extras frontend gems git init omniauth pundit railsapps readme setup tests4)
 
     ### collections of preferences that are known to work together
 
